--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0.1; url=/dist/index.html">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Morningcore's Blog</title>
 </head>
 <body>
-
-  中间跳转
+  <script src="./src/index.tsx"></script>
 </body>
 </html>
