--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="refresh" content="0; url=/dist">
-  <title>蔡老板的树洞</title>
+  <title>Morningcore's Blog</title>
 </head>
 <body>
 
