--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>蔡老板的树洞</title>
-</head>
+<link rel="stylesheet" href="/dist/8fa23e4d375d4a90b4f83043ed57170b.css"></head>
 <body>
-  <script src="./src/index.tsx"></script>
+  <script src="/dist/8fa23e4d375d4a90b4f83043ed57170b.js"></script>
 </body>
 </html>
