--- a/index1.html
+++ b/index1.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <meta http-equiv="refresh" content="0; url=/dist">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>蔡老板的树洞</title>
 </head>
 <body>
-
+  <script src="./src/index.tsx"></script>
 </body>
 </html>
